--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,19 @@ header {
     color: white;
     padding: 10px;
     text-align: center;
-    font-size: 30px;
+    font-size: 50px;
     border-radius: 10px;
     margin-bottom: 10px;
 }
+h1{
+    font-size: 50px;
+    font-weight: bold;
+}
 
-h2#form-heading {
+h2 {
     margin-bottom: 10px;
-    font-size: 40px;
+    margin-left: 10px;
+    font-size: 30px;
 }
 
 button#search-button {
@@ -19,15 +24,35 @@ button#search-button {
 }
 
 #today {
-    background-color: red;
     padding: 10px;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
-#forcast {
-    background-color: blue;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 10px;
+h5.card-title.header{
+    font-size: 30px;
+    font-weight: bold;
 }
+
+div.card-body {
+    background-color: lightblue;
+
+}
+
+div.card.col-2 {
+    margin-left: 15px;
+    background-color: lightblue;
+
+}
+
+
+
+
+.btn.btn-block{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: white;
+    background-color: #2c3e50;
+}
+
+
